@@ -1,5 +1,10 @@
 2009-01-20  Vincent Untz  <vuntz@gnome.org>
 
+	* applet.c: (panel_applet_stop_loading): the assertion there was wrong,
+	and caused a crash when reloading an applet that crashed.
+
+2009-01-20  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-toplevel.c: (panel_toplevel_update_struts): do not recompute
 	the end position of the initial animation, since it's not needed, and
 	it overrides the struts conflict resolution.
